
== 3/17/12

Initial release.

== 3/18/12

Added hooks for subclassing.

== 3/19/12

Moved parent initialization to separate method (with call to initialize so existing behavior remains).
Now parent can be initialized after object initialization.

== 3/24/12

Added _without_hook methods to perform actions without calling hooks.
