@@ -1,4 +1,10 @@
 
+if $__compositing_array__spec__development
+  require_relative '../../compositing-object/lib/compositing-object.rb'
+else
+  require 'compositing-object'
+end
+
 class ::CompositingHash < ::Hash
 end
 
